} {m.get(annual_return,0)+8.2%}')print(f'Sharpe   {0.1510}  -  {m.get(sharpe,0)8.2f}')print(f'回撤     {6.22%10}  -  {m.get(max_drawdown,0)8.2%}')
  File "<string>", line 31
    print(f'年化收益: {+3.33%:>10} {:-
                        ^
SyntaxError: f-string: expecting '=', or '!', or ':', or '}'
